--- a/style.css
+++ b/style.css
@@ -83,19 +83,35 @@ body {
   position: relative; /* Added */
   z-index: 10; /* Added */
 }
-
-.input-group input[type="date"],
+.input-group input[type="date"  id="date" name="date" min="2024-01-01" max="2024-12-31"
+],
 .input-group input[type="time"] {
   width: calc(100% - 20px); /* Updated */
   padding: 10px;
   font-size: 16px;
-  color: black;
   border-radius: 10px;
   border: none;
   outline: none;
   position: relative; /* Added */
   z-index: 10; /* Added */
+  color: #000; /* Set text color to black */
 }
+
+/* Style the date picker */
+/* Hide the default arrow icon */
+.input-group input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
+}
+
+/* Style the calendar icon */
+.input-group input[type="date"] {
+  background-image: url('data:image/svg+xml;utf8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M6 8h2v2H6zm0-3h2v2H6zm3 3h2v2H9zm0-3h2v2H9zm3 3h2v2h-2zm0-3h2v2h-2zm3 3h2v2h-2zm0-3h2v2h-2zM6 14h2v2H6zm3 0h2v2H9zm3 0h2v2h-2zm3 0h2v2h-2z"/></svg>');
+  background-size: 24px;
+  background-repeat: no-repeat;
+  background-position: right center;
+  padding-right: 30px; /* Adjust as needed */
+}
+
 
 #book-btn {
   background-color: #fff;
