--- a/style.css
+++ b/style.css
@@ -49,69 +49,46 @@ body {
   z-index: 9;
   transition: all linear 0.4s;
 }
-#time-slot {
-  background-color: #95c11e;
-  padding: 50px;
-  border-radius: 20px;
-  margin: 50px auto;
-  max-width: 600px;
-  text-align: center;
-}
-
-#time-slot {
-  background-color: #95c11e;
-  padding: 50px;
-  border-radius: 20px;
-  margin: 50px auto;
-  max-width: 600px;
-  text-align: center;
-  position: relative; /* Added */
-  z-index: 10; /* Added */
-}
-
-.input-group {
-  margin-bottom: 20px;
-  position: relative; /* Added */
-  z-index: 10; /* Added */
-}
-
-.input-group label {
-  display: block;
-  font-size: 20px;
-  font-weight: 600;
-  margin-bottom: 10px;
-  position: relative; /* Added */
-  z-index: 10; /* Added */
-}
-.input-group input[type="date"  id="date" name="date" min="2024-01-01" max="2024-12-31"
-],
+/* Adjust the background color of the date and time inputs */
+.input-group input[type="date"],
 .input-group input[type="time"] {
-  width: calc(100% - 20px); /* Updated */
+  width: calc(100% - 20px);
   padding: 10px;
   font-size: 16px;
   border-radius: 10px;
   border: none;
   outline: none;
-  position: relative; /* Added */
-  z-index: 10; /* Added */
-  color: #000; /* Set text color to black */
+  position: relative;
+  z-index: 10;
+  color: #000;
+  background-color: #fff; /* Change the background color to white */
 }
 
-/* Style the date picker */
-/* Hide the default arrow icon */
-.input-group input[type="date"]::-webkit-calendar-picker-indicator {
-  display: none;
-}
-
-/* Style the calendar icon */
+/* Style the date picker icon */
 .input-group input[type="date"] {
-  background-image: url('data:image/svg+xml;utf8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M6 8h2v2H6zm0-3h2v2H6zm3 3h2v2H9zm0-3h2v2H9zm3 3h2v2h-2zm0-3h2v2h-2zm3 3h2v2h-2zm0-3h2v2h-2zM6 14h2v2H6zm3 0h2v2H9zm3 0h2v2h-2zm3 0h2v2h-2z"/></svg>');
+  background-image: url('data:image/svg+xml;utf8,<svg fill="%23000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M6 8h2v2H6zm0-3h2v2H6zm3 3h2v2H9zm0-3h2v2H9zm3 3h2v2h-2zm0-3h2v2h-2zm3 3h2v2h-2zm0-3h2v2h-2zM6 14h2v2H6zm3 0h2v2H9zm3 0h2v2h-2zm3 0h2v2h-2z"/></svg>');
   background-size: 24px;
   background-repeat: no-repeat;
   background-position: right center;
-  padding-right: 30px; /* Adjust as needed */
+  padding-right: 30px;
 }
 
+/* Ensure date picker calendar only allows 2024 dates */
+.input-group input[type="date"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url('data:image/svg+xml;utf8,<svg fill="%23000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M6 8h2v2H6zm0-3h2v2H6zm3 3h2v2H9zm0-3h2v2H9zm3 3h2v2h-2zm0-3h2v2h-2zm3 3h2v2h-2zm0-3h2v2h-2zM6 14h2v2H6zm3 0h2v2H9zm3 0h2v2h-2zm3 0h2v2h-2z"/></svg>');
+  background-size: 24px;
+  background-repeat: no-repeat;
+  background-position: right center;
+  padding-right: 30px;
+}
+
+/* Ensure date picker calendar only allows 2024 dates */
+.input-group input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
+}
 
 #book-btn {
   background-color: #fff;
